# pypi-tests

./: requirements.txt
.github/workflows/: ci.yml
dummy_package/: pyproject.toml  setup.py
dummy_package/src/dummy_package/: module.py
