[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dummy_package_aro61490"
version = "0.0.2"
description = "A sample Python package for testing CI pipeline"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alfonso Rodríguez Ongay", email = "alfonso.ro.96@gmail.com" }]
dependencies = ["prefect==2.20.6",
                "databricks-connect==14.3.*"
]

[project.scripts]
dummy_package = "dummy_package_aro61490.src.dummy_package_aro61490.module:main"
